app/assets/stylesheets/cypress/_text.scss
a.label {
  color: $brand-white;
}

.summary-title {
  margin-top: 10px;
  max-width: 30em;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;

  &:hover {
    white-space: normal;
    overflow: hidden;
  }
}

.terms {
  div {
    font-weight: bold;
    font-size: 12px;
  }
}

.error-page {
  background: url('geometry2.png');

  body {
    background-color: inherit;
  }
}

.error-message {
  @include center-block;

  text-align: center;
  width: 60%;
  margin-top: 5em;

  h1 {
    font-size: 4em;
    font-family: 'Ubuntu';
    font-weight: 100;
    line-height: 1.2;
  }

  .error-links {
    margin-top: 1em;
  }
}

main:focus { outline: none; }

.configured-banner { margin-bottom: 2em; }

.configured-mailer {
  dt {
    font-weight: normal;
    text-align: left;
  }

  dd { font-weight: bold; }
}

.xml-content {
  font-size: .8em;
}

.execution-status {
  padding: 1em;
}

.valueset-listitem {
  padding: .5em;
}

